--- a/style.css
+++ b/style.css
@@ -63,13 +63,14 @@ header, footer, span, a, p, article {
 
 /* contents */
 .index_article_thumb {
-	background-size: 100%;
 	background-repeat: no-repeat;
-	height: 135px;
+	width: 100%;
+	height: 0;
 	background-position:center top;
 	background-size: cover;
 	background-color: #eee;
 	margin-bottom: 12px;
+	padding-bottom: 42%;
 }
 .index_article_title {
 	display: block;
