--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ header, footer, span, a, p, article {
 	display: block;
 	margin: auto;
 }
-content img {
+.single_article_content img {
 	max-width: 100%;
 	height: auto;
 }
