--- a/style.css
+++ b/style.css
@@ -61,45 +61,6 @@ header, footer, span, a, p, article {
 	margin-top: 4px;
 }
 
-/* contents */
-.index_article_thumb {
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 0;
-	background-position:center top;
-	background-size: cover;
-	background-color: #eee;
-	margin-bottom: 12px;
-	padding-bottom: 43.5%;
-}
-.index_article_title {
-	display: block;
-	font-size: 18px;
-	padding: 0 10px;
-	margin-bottom: 8px;
-	word-break:break-all;
-}
-.index_article_info a{
-	display: block;
-	font-size: 11px;
-	padding: 0 10px;
-	margin-bottom: 40px;
-	word-break:break-all;
-}
-#wp-load-more-btn {
-	width: 26px;
-	height: 26px;
-	background: url(image/buttonsx2.png) no-repeat 0 -43px;
-	background-size: 70px 200px;
-	border: 0 solid #000;
-	display: block;
-	margin: auto;
-}
-.single_article_content img {
-	max-width: 100%;
-	height: auto;
-}
-
 /* footer */
 #footer {
 	margin-top: 60px;
@@ -141,4 +102,48 @@ header, footer, span, a, p, article {
 	float: right;
 	margin-right: 10px;
 	margin-top: 4px;
+}
+
+/* contents */
+.index_article_thumb {
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 0;
+	background-position:center top;
+	background-size: cover;
+	background-color: #eee;
+	margin-bottom: 12px;
+	padding-bottom: 43.5%;
+}
+.index_article_title {
+	display: block;
+	font-size: 18px;
+	padding: 0 10px;
+	margin-bottom: 8px;
+	word-break:break-all;
+}
+.index_article_info a{
+	display: block;
+	font-size: 11px;
+	padding: 0 10px;
+	margin-bottom: 40px;
+	word-break:break-all;
+}
+#wp-load-more-btn {
+	width: 26px;
+	height: 26px;
+	background: url(image/buttonsx2.png) no-repeat 0 -43px;
+	background-size: 70px 200px;
+	border: 0 solid #000;
+	display: block;
+	margin: auto;
+}
+
+/* single contents */
+.single_article_content img {
+	max-width: 100%;
+	height: auto;
+}
+.single_article_content p, .single_article_content a, .single_article_content div  {
+	font-size: 13px;
 }
