--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ header, footer, span, a, p, article {
 	max-width: 100%;
 	height: auto;
 }
-.single_article_content p, .single_article_content a  {
+.single_article_content > p, .single_article_content > a  {
 	font-size: 15px;
 	padding: 0 10px;
 }
