--- a/style.css
+++ b/style.css
@@ -140,6 +140,9 @@ header, footer, span, a, p, article {
 }
 
 /* single contents */
+.single_article_title {
+	padding: 0 10px;
+}
 .single_article_content img {
 	max-width: 100%;
 	height: auto;
