--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ header, footer, span, a, p, article {
     margin: 40px 0 40px 0;
 }
 .single_article_content img {
-	max-width: 100%;
+	width: 100%;
 	height: auto;
 }
 .single_article_content > p, .single_article_content > a  {
