--- a/style.css
+++ b/style.css
@@ -154,6 +154,6 @@ header, footer, span, a, p, article {
 	padding: 0 10px;
 	margin-bottom: 20px;
 }
-.single_article_content p[img] {
-	padding: 0 20px;
+p[img] {
+	padding: 0 200px;
 }
