--- a/style.css
+++ b/style.css
@@ -154,6 +154,9 @@ header, footer, span, a, p, article {
 	padding: 0 10px;
 	margin-bottom: 20px;
 }
-.single_article_content p:has(> img.active)) {
-	padding: 0 100px;
+.img_container {
+	padding: 0;
+}
+.single_article_content .alignleft {
+	padding: 10px;
 }
