--- a/style.css
+++ b/style.css
@@ -45,20 +45,58 @@ header, footer, span, a, p, article {
 	background-color: #fff;
 	border-bottom: 1px solid #eee;
 }
-.blogTitle {
+.menu_normal .blogTitle {
 	width: 24px;
 	height: 15px;
 	background: url(image/buttonsx2.png) no-repeat 0 0;
 	background-size: 70px 200px;
 	float: left;
 }
-.menubtn {
+.menu_normal .menubtn {
 	width: 20px;
 	height: 8px;
 	background: url(image/buttonsx2.png) no-repeat 0 -25px;
 	background-size: 70px 200px;
 	float: right;
 	margin-top: 4px;
+}
+.menu_open {
+	padding: 15px 10px 0 10px;
+	background-color: #000;
+	opacity: 0.95;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+.menu_open .blogTitle {
+	width: 24px;
+	height: 15px;
+	background: url(image/buttonsx2.png) no-repeat -35px 0;
+	background-size: 70px 200px;
+	display: block;
+	float: left;
+}
+.menu_open .menubtn {
+	width: 24px;
+	height: 16px;
+	background: url(image/buttonsx2.png) no-repeat -31px -21px;
+	background-size: 70px 200px;
+	display: block;
+	float: right;
+}
+.menu {
+	display: block;
+	margin-top: 40px;
+}
+.menu_open a {
+	color: #fff;
+	font-size: 18px;
+}
+.menu ul li {
+	display: inline;
+	padding-right: 60px;
 }
 
 /* footer */
