--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header, footer, span, a, p, article {
 }
 .menu_open {
 	padding: 15px 10px 0 10px;
-	background-color: red;
+	background-color: #000;
 	opacity: 0.95;
 	position: absolute;
 	top: 0;
