--- a/style.css
+++ b/style.css
@@ -97,8 +97,16 @@ header, footer, span, a, p, article {
 	display: inline;
 	padding-right: 60px;
 }
+.widget {
+	margin-top: 30px;
+}
 .widgettitle {
 	color: #fff;
+	font-size: 10px;
+}
+.widget ul li {
+	display: inline;
+	padding-right: 30px;
 }
 
 
