--- a/style.css
+++ b/style.css
@@ -94,22 +94,23 @@ header, footer, span, a, p, article {
 }
 .menu_open a {
 	color: #fff;
+	font-size: 20px;
 }
 .menu ul li {
 	display: inline;
 	padding-right: 60px;
 }
 .top_menu {
-	margin-top: 30px;
+	margin-top: 52px;
 }
 .top_menu .widgettitle {
-	color: #ddd;
+	color: #777;
 	font-size: 10px;
 }
 .top_menu ul li {
 	display: inline-block;
 	padding-right: 60px;
-	padding-top: 15px;
+	padding-top: 22px;
 }
 
 
