--- a/style.css
+++ b/style.css
@@ -197,8 +197,10 @@ header, footer, span, a, p, article {
 	padding: 0 10px;
 	display: block;
     margin: 30px 0 8px 0;
-    font-size: 24px;
     text-align: center;
+}
+.single_article_title > a {
+	font-size: 24px;
 }
 .single_article_content img {
 	width: 100%;
