--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header, footer, span, a, p, article {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	display: block;
+	display: none;
 }
 .menu_open .blogTitle {
 	width: 24px;
@@ -216,24 +216,38 @@ header, footer, span, a, p, article {
 .single_article_content .alignleft {
 	padding: 10px;
 }
+
+/* bottom nev */
 .bottom_nev {
 	background-color: #fff;
 	border-top: 10px solid #eee;
 	border-bottom: 10px solid #eee;
-}
-.bottom_nev > div {
+	width: 100%;
 	display: inline-block;
+	margin-top: 30px;
 }
-.bottom_nev > div > a > img {
+.bottom_nev .bottom_next {
+	border-bottom: 1px solid #eee;
+}
+.bottom_nev .bottom_next .bottom_next_thumb, .bottom_nev .bottom_prev .bottom_prev_thumb {
 	width: 120px;
 	height: 54px;
 	vertical-align: bottom;
-	margin-bottom: 1px;
 	float: left;
-	padding-right: 10px;
+	margin-right: 10px;
+	background-size: 120px 54px;
 }
-.bottom_nev > div > a {
-	font-size: 18px;
-	vertical-align: top;
-	line-height: 1.8;
+.bottom_nev div {
+	width: 100%;
+	display: inline-block;
+	position: relative;
+	float: left;
+}
+.bottom_nev div  a {
+	font-size: 16px;
+	display: block;
+	padding: 10px 0 0 130px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
 }
