--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ header, footer, span, a, p, article {
 	font-size: 14px;
 	padding: 0 10px;
 	margin-bottom: 20px;
+	line-height: 1.4
 }
 .single_article_content .img_container {
 	padding: 0;
