--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ header, footer, span, a, p, article {
 	width: 100%;
 	height: 100%;
 	display: none;
+	z-index: 10;
 }
 .menu_open .blogTitle {
 	width: 24px;
@@ -200,7 +201,6 @@ header, footer, span, a, p, article {
 }
 .single_article_title > a {
 	font-size: 26px;
-	font-weight: 200;
 }
 .single_article_content img {
 	width: 100%;
@@ -211,7 +211,6 @@ header, footer, span, a, p, article {
 	padding: 0 10px;
 	margin-bottom: 20px;
 	line-height: 1.4;
-	font-weight: 200;
 }
 .single_article_content .img_container {
 	padding: 0;
@@ -249,7 +248,6 @@ header, footer, span, a, p, article {
 }
 .bottom_nev div  a {
 	font-size: 16px;
-	font-weight: 200;
 	display: block;
 	padding: 8px 10px 0 130px;
 	width: 100%;
