--- a/style.css
+++ b/style.css
@@ -207,10 +207,11 @@ header, footer, span, a, p, article {
 	height: auto;
 }
 .single_article_content > p, .single_article_content > a  {
-	font-size: 18px;
+	font-size: 16px;
 	padding: 0 10px;
 	margin-bottom: 20px;
 	line-height: 1.4;
+	font-weight: 300;
 }
 .single_article_content .img_container {
 	padding: 0;
@@ -247,11 +248,12 @@ header, footer, span, a, p, article {
 	float: left;
 }
 .bottom_nev div  a {
-	font-size: 18px;
+	font-size: 16px;
 	display: block;
 	padding: 8px 10px 0 130px;
 	width: 100%;
 	height: 100%;
 	line-height: 1.2;
+	font-weight: 300;
 	position: absolute;
 }
