--- a/style.css
+++ b/style.css
@@ -176,11 +176,15 @@ header, footer, span, a, p, article {
 	padding: 0 10px;
 	margin-bottom: 4px;
 }
-.index_article_info a{
-	display: block;
-	font-size: 11px;
+.index_article_info {
 	padding: 0 10px;
+	display: block;
 	margin-bottom: 24px;
+	font-size: 12px;
+}
+.index_article_info a{
+	font-size: 11px;
+	display: inline-block;
 }
 #wp-load-more-btn {
 	width: 26px;
