--- a/style.css
+++ b/style.css
@@ -170,14 +170,15 @@ header, footer, span, a, p, article {
 	background-position:center top;
 	background-size: cover;
 	background-color: #eee;
-	margin-bottom: 8px;
+	margin-bottom: 10px;
 	padding-bottom: 45%;
 }
 .index_article_title {
 	display: block;
 	font-size: 18px;
 	padding: 0 10px;
-	margin-bottom: 4px;
+	margin-bottom: 6px;
+	line-height: 1.2;
 }
 .index_article_info {
 	padding: 0 10px;
