--- a/style.css
+++ b/style.css
@@ -1,4 +1,45 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+/** Ultra Light */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 100;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff");
+}
+
+/** Thin */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 200;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff");
+}
+
+/** Regular */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
+
+/** Medium */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 500;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-medium-webfont.woff");
+}
+
+/** Semi Bold */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 600;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff");
+}
+
+/** Bold */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 700;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
+}
+
 * {
 	padding: 0; margin: 0;
 	-webkit-box-sizing: border-box;
@@ -21,8 +62,8 @@ ul {
 	list-style-type: none;
 }
 h1, h2, h3, h4, h5, h6, header, footer, span, a, p, article {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-weight: 200;
+	font-family: "San Francisco", Helvetica, Arial, sans-serif;
+	font-weight: 400;
 	font-style: normal;
 	letter-spacing: 0.5pt;
 	word-break: break-all;
