--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ ul {
 	list-style-type: none;
 }
 h1, h2, h3, h4, h5, h6, header, footer, span, a, p, article {
-	font-family: "San Francisco", Helvetica, Arial, sans-serif;
+	font-family: "San Francisco", Arial, sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	letter-spacing: 0.5pt;
