--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ header, footer, span, a, p, article {
 }
 .single_article_title > a {
 	font-size: 32px;
+    line-height: 1.2;
 }
 .single_article_content img {
 	width: 100%;
