--- a/style.css
+++ b/style.css
@@ -327,4 +327,10 @@ header, footer, span, a, p, article {
 	.index_article_info {
 		padding: 0;
 	}
+	.index_article_info a {
+		font-size: 12px;
+	}
+	.home_article {
+		margin-bottom: 42px;
+	}
 }
