--- a/style.css
+++ b/style.css
@@ -292,11 +292,11 @@ header, footer, span, a, p, article {
 		background-size: 140px 800px;
 	}
 	.menu_normal .menubtn {
-		width: 36px;
+		width: 32px;
 		height: 14px;
 		background: url(image/buttonsx1.png) no-repeat 0 -40px;
 		background-size: 140px 800px;
-	    margin-top: 6px;
+	    margin-top: 7px;
 	}
 
 	/* container */
@@ -323,6 +323,7 @@ header, footer, span, a, p, article {
 	.index_article_title {
 		padding: 0;
 		font-size: 26px;
+		margin-bottom: 8px;
 	}
 	.index_article_info {
 		padding: 0;
