--- a/style.css
+++ b/style.css
@@ -298,7 +298,18 @@ header, footer, span, a, p, article {
 		background-size: 140px 800px;
 	    margin-top: 7px;
 	}
-
+	/* footer */
+	#footer {
+		width: 1040px;
+		float: left;
+		margin-left: 20px;
+	}
+	.twitterbtn {
+		margin-left: 0;
+	}
+	.b2btn {
+		margin-right: 0;
+	}
 	/* container */
 	#main {
 		margin-top: 32px;
@@ -308,10 +319,6 @@ header, footer, span, a, p, article {
 		width: 1040px;
 		height: 100%;
 	}
-	#footer {
-		width: 1040px;
-		float: left;
-	}
 	.menu_normal {
 		padding: 15px 20px 0 20px;
 		height: 48px;
@@ -319,9 +326,6 @@ header, footer, span, a, p, article {
 		/*border-bottom: 1px solid #eee;*/
 	}
 	article {
-		width: 480px;
-		display: inline-block;
-		float: left;
 		margin: 0 20px;
 	}
 	.index_article_title {
