--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ header, footer, span, a, p, article {
 
 	/* footer */
 	#footer {
-		width: 1040px;
+		width: 1000px;
 		float: left;
 		margin-left: 20px;
 	}
@@ -352,5 +352,8 @@ header, footer, span, a, p, article {
 	#wp-load-more-btn {
 		float: left;
     	margin-left: 508px;
+	}
+	.single_article {
+		width: 100px;
 	}
 }
