--- a/style.css
+++ b/style.css
@@ -356,4 +356,8 @@ header, footer, span, a, p, article {
 	.single_article {
 		width: 1000px;
 	}
+	.bottom_nev {
+		width: 1000px;
+		margin-left: 20px;
+	}
 }
