--- a/style.css
+++ b/style.css
@@ -72,22 +72,27 @@ header, footer, span, a, p, article {
 }
 .menu_normal .menubtn {
 	width: 20px;
-	height: 10px;
-	background: url(image/buttonsx2.png) no-repeat 0 -25px;
-	background-size: 70px 200px;
-	float: right;
-	margin-top: 4px;
+    height: 20px;
+    background: url(image/buttonsx2.png) no-repeat 0 -20px;
+    background-size: 70px 200px;
+    float: right;
 }
 .menu_open {
 	padding: 15px 10px 0 10px;
-	background-color: #000;
-	opacity: 0.95;
 	position: absolute;
 	top: 0;
 	width: 100%;
 	height: 100%;
 	display: none;
 	z-index: 10;
+}
+.menu_background_color {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+    background-color: #000;
+    opacity: 0.96;
+    top: 0;
 }
 .menu_open .blogTitle {
 	width: 24px;
@@ -292,17 +297,28 @@ header, footer, span, a, p, article {
 	}
 	.menu_normal .menubtn {
 		width: 34px;
-		height: 12px;
-		background: url(image/buttonsx1.png) no-repeat 0 -40px;
+		height: 34px;
+		background: url(image/buttonsx1.png) no-repeat 0 -28px;
 		background-size: 140px 400px;
-	    margin-top: 8px;
+	}
+	.menu_normal {
+		padding: 15px 20px 0 20px;
+		height: 48px;
+		background-color: #fff;
+		width: 1040px;
+    	margin: auto;
+	}
+	.menu_open {
+		width: 1040px;
+		padding: 15px 20px 0 20px;
+		left: 50%;
+    	margin-left: -520px;
 	}
 
 	/* footer */
 	#footer {
 		width: 1000px;
-		float: left;
-		margin-left: 20px;
+		margin: 50px auto;
 	}
 	.twitterbtn {
 		width: 28px;
@@ -336,19 +352,15 @@ header, footer, span, a, p, article {
 
 	/* container */
 	#main {
+		width: 1040px;
+		margin: auto;
 		margin-top: 32px;
 	}
-	#container {
+/*	#container {
 		margin: auto;
 		width: 1040px;
 		height: 100%;
-	}
-	.menu_normal {
-		padding: 15px 20px 0 20px;
-		height: 48px;
-		background-color: #fff;
-		/*border-bottom: 1px solid #eee;*/
-	}
+	}*/
 	.home_article {
 		width: 480px;
 		display: inline-block;
@@ -377,8 +389,8 @@ header, footer, span, a, p, article {
 		height: 36px;
 		background: url(image/buttonsx1.png) no-repeat 0 -70px;
 		background-size: 140px 400px;
-		float: left;
     	margin-left: 504px;
+    	clear: left;
 	}
 	#wp-load-more-btn:hover {
 		background: url(image/buttonsx1.png) no-repeat -70px -70px;
