--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ header, footer, span, a, p, article {
 		height: 34px;
 		background: url(image/buttonsx1.png) no-repeat 0 -28px;
 		background-size: 140px 400px;
+		margin-top: -4px;
 	}
 	.menu_normal {
 		padding: 15px 20px 0 20px;
@@ -314,12 +315,41 @@ header, footer, span, a, p, article {
 		left: 50%;
     	margin-left: -520px;
 	}
+	.menu_open .blogTitle {
+		width: 36px;
+		height: 22px;
+		background: url(image/buttonsx1.png) no-repeat -70px 0px;
+		background-size: 140px 400px;
+		display: inline-block;
+	}
+	.menu_open .menubtn {
+		width: 28px;
+		height: 28px;
+		background: url(image/buttonsx1.png) no-repeat -70px -32px;
+		background-size: 140px 400px;
+		display: block;
+		float: right;
+		margin-top: 1px;
+		margin-right: 2px;
+	}
+	.top_menu ul li {
+		padding-right: 30px;
+		padding-top: 16px;
+	}
+	.menu_open a {
+		font-size: 28px;
+		font-weight: 600;
+	}
+	.top_menu .widgettitle {
+		font-size: 12px;
+	}
 
 	/* footer */
 	#footer {
 		width: 1000px;
-		margin: 60px auto;
+		margin: 80px auto;
 		clear: left;
+		margin-bottom: 20px;
 	}
 	.twitterbtn {
 		width: 28px;
@@ -357,17 +387,11 @@ header, footer, span, a, p, article {
 		margin: auto;
 		margin-top: 32px;
 	}
-/*	#container {
-		margin: auto;
-		width: 1040px;
-		height: 100%;
-	}*/
 	.home_article {
 		width: 480px;
 		display: inline-block;
 		float: left;
-		margin: 0 20px;
-		height: 328px;
+		margin: 0 20px 36px 20px;
 	}
 	.index_article_title {
 		padding: 0;
