--- a/style.css
+++ b/style.css
@@ -74,9 +74,6 @@ header, footer, span, a, p, article {
 }
 
 /* container */
-#main {
-	margin-top: 12px;
-}
 .pagenavi {
 	/*display: none;*/
 }
@@ -85,8 +82,10 @@ header, footer, span, a, p, article {
 .menu_normal {
 	padding: 15px 10px 0 10px;
 	height: 48px;
-	background-color: #fff;
-	/*border-bottom: 1px solid #eee;*/
+	position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: 1;
 }
 .menu_normal .blogTitle {
 	width: 24px;
@@ -207,6 +206,9 @@ header, footer, span, a, p, article {
 }
 
 /* contents */
+#content {
+	padding-top: 48px;
+}
 .home_article{
 	margin-bottom: 28px;
 }
@@ -250,12 +252,6 @@ header, footer, span, a, p, article {
 .single_article_title {
 	padding: 0 10px;
 	display: block;
-    margin: 22px 0 8px 0;
-    text-align: center;
-}
-.single_article_title > a {
-	font-size: 32px;
-    line-height: 1.2;
 }
 .single_article_content img {
 	width: 100%;
@@ -273,6 +269,22 @@ header, footer, span, a, p, article {
 .single_article_content .alignleft {
 	padding: 0 10px;
 	float: left;
+}
+/* top image */
+.top_img_container {
+	width: 100%;
+	height: 180px;
+	background-color: #eee;
+	position: absolute;
+	top: 0;
+	background-repeat: no-repeat;
+    background-position: center;
+}
+.alignnone {
+	display: none;
+}
+#content_content {
+	padding-top: 210px;
 }
 
 /* bottom nev */
