--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ header, footer, span, a, p, article {
 }
 .single_article_content > p, .single_article_content > a  {
 	font-size: 16px;
+	padding: 0 10px;
 	line-height: 1.4;
 }
 .single_article_content .img_container {
