--- a/style.css
+++ b/style.css
@@ -472,6 +472,12 @@ header, footer, span, a, p, article {
 	#content_content {
 		padding-top: 300px;
 	}
+	.single_article_title {
+		padding: 0;
+	}
+	.single_article_content .alignleft {
+	    padding: 0;
+	}
 
 	/* top image */
 	.top_img_container {
