--- a/style.css
+++ b/style.css
@@ -115,8 +115,9 @@ header, footer, span, a, p, article {
 	height: 100%;
 	position: absolute;
     background-color: #000;
-    opacity: 0.96;
+    opacity: 0.92;
     top: 0;
+    left: 0;
     z-index: 5;
 }
 .menu_open .blogTitle {
