--- a/style.css
+++ b/style.css
@@ -301,12 +301,12 @@ header, footer, span, a, p, article {
 	border-bottom: 1px solid #eee;
 }
 .bottom_nev .bottom_next .bottom_next_thumb, .bottom_nev .bottom_prev .bottom_prev_thumb {
-	width: 120px;
-	height: 54px;
+	width: 180px;
+	height: 81px;
 	vertical-align: bottom;
 	float: left;
 	margin-right: 10px;
-	background-size: 120px 54px;
+	background-size: 180px 81px;
 	background-color: #f3f3f3;
 }
 .bottom_nev div {
@@ -316,9 +316,9 @@ header, footer, span, a, p, article {
 	float: left;
 }
 .bottom_nev div  a {
-	font-size: 16px;
+	font-size: 22px;
 	display: block;
-	padding: 8px 10px 0 130px;
+	padding: 8px 10px 0 196px;
 	width: 100%;
 	height: 100%;
 	line-height: 1.2;
@@ -473,6 +473,9 @@ header, footer, span, a, p, article {
 	}
 	#content_content {
 		padding-top: 300px;
+	}
+	.single_article_content > p, .single_article_content > a {
+    	font-size: 18px;
 	}
 	.single_article_title, .single_article_content > p, .single_article_content > a, .single_article_content .alignleft {
 		padding: 0;
