--- a/style.css
+++ b/style.css
@@ -135,6 +135,20 @@ header, footer, span, a, p, article {
 	display: block;
 	float: right;
 }
+.menu_normal .blogTitle_content {
+	width: 24px;
+	height: 16px;
+	background: url(image/buttonsx2.png) no-repeat -35px 0;
+	background-size: 70px 200px;
+	float: left;
+}
+.menu_normal .menubtn_content {
+	width: 20px;
+    height: 20px;
+    background: url(image/buttonsx2.png) no-repeat 0 -155px;
+    background-size: 70px 200px;
+    float: right;
+}
 .menu {
 	display: block;
 	margin-top: 40px;
@@ -271,6 +285,7 @@ header, footer, span, a, p, article {
 	padding: 0 10px;
 	float: left;
 }
+
 /* top image */
 .top_img_container {
 	width: 100%;
@@ -339,6 +354,19 @@ header, footer, span, a, p, article {
 		width: 34px;
 		height: 34px;
 		background: url(image/buttonsx1.png) no-repeat 0 -28px;
+		background-size: 140px 400px;
+		margin-top: -4px;
+	}
+	.menu_normal .blogTitle_content {
+		width: 36px;
+		height: 22px;
+		background: url(image/buttonsx1.png) no-repeat -70px 0;
+		background-size: 140px 400px;
+	}
+	.menu_normal .menubtn_content {
+		width: 34px;
+		height: 34px;
+		background: url(image/buttonsx1.png) no-repeat 0 -248px;
 		background-size: 140px 400px;
 		margin-top: -4px;
 	}
