--- a/style.css
+++ b/style.css
@@ -316,12 +316,12 @@ header, footer, span, a, p, article {
 	border-bottom: 1px solid #eee;
 }
 .bottom_nev .bottom_next .bottom_next_thumb, .bottom_nev .bottom_prev .bottom_prev_thumb {
-	width: 180px;
-	height: 81px;
+	width: 120px;
+	height: 54px;
 	vertical-align: bottom;
 	float: left;
 	margin-right: 10px;
-	background-size: 180px 81px;
+	background-size: 120px 54px;
 	background-color: #f3f3f3;
 }
 .bottom_nev div {
@@ -331,9 +331,9 @@ header, footer, span, a, p, article {
 	float: left;
 }
 .bottom_nev div  a {
-	font-size: 22px;
+	font-size: 16px;
 	display: block;
-	padding: 8px 10px 0 196px;
+	padding: 6px 10px 0 130px;
 	width: 100%;
 	height: 100%;
 	line-height: 1.2;
@@ -510,6 +510,24 @@ header, footer, span, a, p, article {
 	}
 	.single_article_title > a {
 		font-size: 34px;
+	}
+	.bottom_nev .bottom_next .bottom_next_thumb, .bottom_nev .bottom_prev .bottom_prev_thumb {
+		width: 180px;
+		height: 81px;
+		vertical-align: bottom;
+		float: left;
+		margin-right: 10px;
+		background-size: 180px 81px;
+		background-color: #f3f3f3;
+	}
+	.bottom_nev div a {
+		font-size: 22px;
+		display: block;
+		padding: 8px 10px 0 196px;
+		width: 100%;
+		height: 100%;
+		line-height: 1.2;
+		position: absolute;
 	}
 
 	/* top image */
