--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ header, footer, span, a, p, article {
 	margin-bottom: 12px;
 }
 .single_article_content img {
-	width: 100%;
+	max-width: 100%;
 	height: auto;
 }
 .single_article_content > p, .single_article_content > a  {
