--- a/style.css
+++ b/style.css
@@ -255,6 +255,10 @@ header, footer, span, a, p, article {
 	display: block;
 	margin-bottom: 12px;
 }
+.single_article_title a {
+	font-size: 20px;
+	font-weight: 400;
+}
 .single_article_content .alignleft, .single_article_content .aligncenter, .single_article_content .alignright {
 	width: 100%;
 	height: auto;
